Alors je le sens bien, mais en cours